# ocst-problem

./: CMakeLists.txt  readme.md
scripts/python/: configOCST.py  generateGraph.py  generateInput.py  readOutput.py  runOCST.py
src/: CMakeLists.txt
src/c++/: ans_optimal.cc  flow_based_formulation.cc  flow_based_relaxed.cc  formulations.cc  main.cc  network.cc  optimal_solver.cc  optimal_struct.cc  path_based_formulation.cc  rooted_tree_formulation.cc  sec_directed_separation.cc  sec_integer.cc  sec_separation.cc  solver.cc  union_find.cc  util_optimal.cc  util_solver.cc
src/c++/headers/: ans_optimal.h  flow_based_formulation.h  flow_based_relaxed.h  formulations.h  network.h  optimal_solver.h  optimal_struct.h  path_based_formulation.h  read_instance.h  rooted_tree_formulation.h  sec_directed_separation.h  sec_integer.h  sec_separation.h  separation.h  solver.h  union_find.h  util_optimal.h  util_solver.h
src/test/: formulations_test.cc  union_find_test.cc  util_optimal_test.cc
src/test/TestInstances/: ocstpin0  ocstpin1  ocstpin1.sol  ocstpin10  ocstpin10.sol  ocstpin11  ocstpin11.sol  ocstpin12  ocstpin12.sol  ocstpin13  ocstpin13.sol  ocstpin14  ocstpin14.sol  ocstpin2  ocstpin2.sol  ocstpin3  ocstpin3.sol  ocstpin4  ocstpin4.sol  ocstpin5  ocstpin5.sol  ocstpin6  ocstpin6.sol  ocstpin7  ocstpin7.sol  ocstpin8  ocstpin8.sol  ocstpin9  ocstpin9.sol  orst0  orst1  orst2  orst3  orst4  orst5  orst5.sol  orst6  orst6.sol  orst7  orst7.sol  (+8 more)
